<resources>
    <string name="app_name">Move! Shake! Drop!</string>
    <string name="action_settings">Settings</string>

    <!--Select Item-->
    <string name="select_item">Select Your Foods and Drinks:</string>
    <string name="title_activity_select_item">Select Foods and Drinks</string>
    <string name="select_item_button">Add Selected Items</string>
    <string-array name="selectItemsList">
        <item>blackberry</item>
        <item>coffee</item>
        <item>coleslaw</item>
        <item>grape</item>
        <item>grapefruit</item>
    </string-array>
    <string name="action_search">Search Items..</string>
    <string name="action_new">Add Item</string>

    <!--Item List-->
    <string name="title_activity_item_list">Today\'s Food and Drink Intake</string>

    <!--Item History-->
    <string name="title_activity_items_history">Daily Food and Drink History</string>

    <!--Add Item To List-->
    <string name="title_activity_add_item_to_list">Add Item To List</string>
    <string name="addItemDesc">This will add an item (food or drink) to the list to
        select from.</string>
    <string name="addItemButtonText">Add New Item</string>

    <!--Add Weight-->
    <string name="title_activity_add_weight">Add New Weight</string>
    <string name="weight">Weight(in lbs):</string>
    <string name="date">Date:</string>
    <string name="addWeightButtonText">Add New Weight</string>

    <!--Weight History-->
    <string name="title_activity_weight_history">Weight History</string>
    <string name="weightHeading">Weight</string>
    <string name="dateWeighedHeading">Date</string>
    <string name="noWeightMessage">You haven\'t entered a weight. Don\'t worry, Add one now from the slide menu on the left or the three lines on the top left.</string>

    <!--Add Goal-->
    <string name="title_activity_add_goal">Add a New Goal</string>
    <string name="goalDescription">Goal Description:</string>
    <string name="completionDate">Completion Date:</string>
    <string name="addGoalButtonText">Add New Goal</string>

    <!--Goal List-->
    <string name="title_activity_goals_list">Goals List</string>
    <string name="moveToCompletedButton">Move to Completed</string>
    <string name="goalListInstructions">Click on the goal when it is completed.</string>
    <string name="noGoalMessage">Please, enter a goal! You can achieve it! Go to the slide menu on the left or the three lines on the top left.</string>

    <!-- Completed Goals List-->
    <string name="title_activity_completed_goals_list">Completed Goals List</string>
    <string name="moveToIncompletedButton">Move back to Goals List</string>
    <string name="completedGoalInstructions">Click on goal if it NOT completed.</string>
    <string name="noCompletedGoalMessage">I\'m sure you\'re on your way to completing some
        goals! Good luck!</string>

    <string name="title_activity_tester">Tester</string>
    <string name="hello_world">Hello world!</string>
    <string-array name="navItems">
        <item>Add A Goal</item>
        <item>Goals List</item>
        <item>Completed Goals List</item>
        <item>Add Weight</item>
        <item>Weight History</item>
        <item>Select Foods/Drinks</item>
        <item>Diet History</item>
    </string-array>
    <string name="drawerOpen">Open Nav Drawer</string>
    <string name="drawerClose">Close Nav Drawer</string>

</resources>
